syntax ="proto3";
package productPackege;

message product {
  int32 id = 1 ;
  string title = 2;
  string price = 3; 


}
message productId{
  int32 id=1;

}
message productList{
  repeated product products=1;
}
message newProduct {
  int32 id=1;
  string title=2;
  string price=3;
}
message empty{}
message Result{
  string status=1;
}
service productService {
  rpc listProduct (empty) returns (productList);
  rpc getProduct (productId) returns (product);
  rpc createProduct (newProduct) returns (Result);
  rpc updateProduct (productId) returns (Result);
  rpc deleteProduct (productId) returns (Result);
  
}
